--- a/source/template/about.jade
+++ b/source/template/about.jade
@@ -1,5 +1,6 @@
 doctype html
 html
+	- var title = "Обо мне | Личный сайт Константина Житкова"
 	include common/_head
 	body
 	include common/_preloader
