--- a/source/template/blog.jade
+++ b/source/template/blog.jade
@@ -1,5 +1,6 @@
 doctype html
 html
+	- var title = "Блог | Личный сайт Константина Житкова"
 	include common/_head
 	body
 	include common/_preloader
@@ -15,15 +16,16 @@ html
 		.l-blog
 			.l-blog__nav
 				nav.m-blog-contents
+					a(href="#").m-blog-contents__toggle
 					ul.m-blog-contents__list
 						li.m-blog-contents__item
 							a(href="#post1").m-blog-contents__link.m-blog-contents__link_active Самое важное в SASS
 						li.m-blog-contents__item
 							a(href="#post2").m-blog-contents__link Приёмы в вёрстке, без которых не обходится ни один сайт
 						li.m-blog-contents__item
-							a(href="#").m-blog-contents__link Самый необходимый набор Gulp плагинов
+							a(href="#post3").m-blog-contents__link Git: подстраховка для ваших проектов
 						li.m-blog-contents__item
-							a(href="#").m-blog-contents__link Почему я выбрал Jade
+							a(href="#post4").m-blog-contents__link Что такое CSS-модули и зачем они нам?
 			ul.m-article__list
 				li.m-article__item#post1
 					h1.m-article__title Самое важное в SASS
@@ -36,5 +38,28 @@ html
 					span.m-article__date 13 ноября 2016
 					p Таким образом начало повседневной работы по формированию позиции позволяет выполнять важные задания по разработке направлений прогрессивного развития. Разнообразный и богатый опыт новая модель организационной деятельности играет важную роль в формировании новых предложений. Товарищи! новая модель организационной деятельности играет важную роль в формировании систем массового участия.
 					p Не следует, однако забывать, что укрепление и развитие структуры обеспечивает широкому кругу (специалистов) участие в формировании систем массового участия. Идейные соображения высшего порядка, а также рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании позиций, занимаемых участниками в отношении поставленных задач. Товарищи! постоянный количественный рост и сфера нашей активности способствует подготовки и реализации модели развития. С другой стороны рамки и место обучения кадров влечет за собой процесс внедрения и модернизации системы обучения кадров, соответствует насущным потребностям.
+				li.m-article__item#post3
+					h1.m-article__title Git: подстраховка для ваших проектов
+					span.m-article__date 19 февраля 2016
+					p Я очень хорошо помню 10 января 2010 года: в этот день мы потеряли всю историю изменений нашего проекта. Мы использовали Subversion в качестве системы контроля версий, которая сохраняла историю нашего проекта в центральном репозитории на сервере. К тому же мы регулярно выполняли резервное копирование данных с сервера — по крайней мере, мы так думали. Сервер сломался, и все резервные копии оказались нерабочими. Наш проект уцелел, однако вся история изменений была утеряна.
+					p Вскоре после поломки сервера мы перешли на Git. Управление версиями мне всегда казалось пыткой; оно было слишком сложным и недостаточно удобным, чтобы я мог оценить его ценность, тем не менее, я выполнял его как нелюбимую обязанность. Однако прошло некоторое время работы с новой системой и я начал понимать, каким полезным может быть Git на самом деле. С того времени он не раз спасал мою шею.
+					p В этой статье я расскажу о том, каким образом Git может помочь вам избежать ошибок и как восстановить проект, если они все-таки имели место.
+					p Поскольку Git является распределённой системой управления версиями, каждый член нашей команды, который клонировал проект (или же «создал её рабочую копию», если вы привыкли к терминологии Subversion), автоматически создаёт на своём диске резервную копию. Эта резервная копия содержит самую последнюю версию проекта, а также полную историю его изменений.
+					p Когда мои более подкованные в техническом плане коллеги рассказывали мне насколько круто пользоваться ветками в Git, я не очень бурно радовался. Во-первых, должен признать, что я не особо понимал в чём состоит преимущество использования веток. И во-вторых, после работы с Subversion я очень живо помнил насколько сложной и склонной к ошибкам являлась эта процедура. Поэтому работа с ветками заставляла меня нервничать, и я старался при любой возможности их избегать.
+					p За годы работы программистом я твёрдо усвоил одну вещь: ошибки случаются вне зависимости от того сколько у вас опыта. Их нельзя избежать, однако можно запастись инструментами, которые помогут их откатить.
+					p Одна из наиболее замечательных возможностей Git состоит в том, что отменить можно практически любое действие. Это даёт мне достаточно уверенности, чтобы бесстрашно экспериментировать, ведь пока что мне так и не удалось сломать что-то настолько, чтобы это действительно нельзя было исправить.
+					p Когда дело касается поиска ошибок, должен признать, что я убил не один час блуждая впотьмах. Часто бывало так, что я был уверен, что пару дней назад все работало, но понятия не имел когда же именно всё пошло наперекосяк. И только когда я узнал о git bisect, процесс поиска возникновения проблемы немного ускорился. В виде команды bisect Git предоставляет инструмент, помогающий обнаружить коммит, с которого всё пошло не так.
+					p Читать далее: http://goo.gl/eOcIfe
+				li.m-article__item#post4
+					h1.m-article__title Что такое CSS-модули и зачем они нам?
+					span.m-article__date 28 февраля 2016
+					p В последнее время меня интригуют CSS-модули. Если вы о них не слышали — эта статья для вас. Мы рассмотрим, что это за проект, какие задачи он решает и каковы причины его возникновения. Если вы тоже заинтриговались — не переключайтесь, следующая статья будет о том, как начать их применять. А если вас интересует внедрение в проект или более продвинутое использование CSS-модулей, третья статья в этой серии будет о том, как использовать их c React.
+					p Согласно определению из репозитория, CSS-модули — это: CSS-файлы, в которых все классы и анимации по умолчанию находятся в локальной области видимости.
+					p CSS-модули — это не официальная спецификация, они не имплементированы в браузеры, скорее, это задача, запускаемая на стадии сборки проекта (например, с помощью Webpack или Browserify), в процессе выполнения которой имена классов и селекторы изменяются так, чтобы образовалась своего рода локальная область видимости (что-то вроде пространства имен).
+					p Вместо того, чтобы писать обычный HTML, нам придётся написать разметку в JavaScript-файле, например, в index.js. В процессе сборки компилятор проанализирует styles.css, который мы импортировали, потом проанализирует JavaScript и сделает класс .title доступным через  styles.title. Затем сгенерирует на их основе новые HTML и CSS-файлы, уже с новыми классами.
+					p CSS-модули гарантируют, что все стили одного компонента:
+					p 1. Находятся в одном месте;
+					p 2. Применяются только к этому компоненту и никакому другому.
+					p Читать далее: http://goo.gl/IemPYT
 		include common/_footer
 	//script(src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBbmH97MMfOdrC8s7zd4E8PZJkGQn--WR0")
