--- a/source/template/common/_head.jade
+++ b/source/template/common/_head.jade
@@ -1,6 +1,6 @@
 head
 	meta(charset='utf-8')
-	title Loftschool builder
+	title= title
 	meta(content='' name='author')
 	meta(content='' name='description')
 	meta(content='' name='keywords')
