--- a/source/template/common/_header_special.jade
+++ b/source/template/common/_header_special.jade
@@ -17,3 +17,7 @@ header.l-header
 				.m-userpic
 			.m-page-info__title Блог
 			.m-page-info__description Статьи, которые я написал
+	.l-header__arrow-down
+		a(href="#").m-arrow
+			svg.m-arrow__icon
+				use(xmlns:xlink="http://www.w3.org/1999/xlink", xlink:href="assets/img/sprite.svg#arrow_down")
