--- a/source/template/common/_header.jade
+++ b/source/template/common/_header.jade
@@ -18,4 +18,6 @@ header.l-header
 			.m-page-info__username Константин Житков
 			.m-page-info__description Личный сайт веб-разработчика
 	.l-header__arrow-down
-		a(href="#").m-arrow-down
+		a(href="#").m-arrow
+			svg.m-arrow__icon
+				use(xmlns:xlink="http://www.w3.org/1999/xlink", xlink:href="assets/img/sprite.svg#arrow_down")
